--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 *.json filter=lfs diff=lfs merge=lfs -text
 *.jsonl filter=lfs diff=lfs merge=lfs -text
 *.pickle filter=lfs diff=lfs merge=lfs -text
+Datas filter=lfs diff=lfs merge=lfs -text
